--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <!-- properties for script build step that creates the config files for the artifacts -->
     <widgets.dir>widgets</widgets.dir>
     <docs.dir>docs</docs.dir>
-    <app.parents>wrangler-service[1.0.0-SNAPSHOT, 4.0.0-SNAPSHOT]</app.parents>
+    <app.parents>wrangler-service[1.0.0-SNAPSHOT, 4.0.0-SNAPSHOT],system:cdap-data-pipeline[4.2.0-SNAPSHOT,4.4.0-SNAPSHOT),system:cdap-data-streams[4.2.0-SNAPSHOT,4.4.0-SNAPSHOT)</app.parents>
     <!-- this is here because project.basedir evaluates to null in the script build step -->
     <main.basedir>${project.basedir}</main.basedir>
     <cdap.version>4.3.0-SNAPSHOT</cdap.version>
@@ -35,6 +35,9 @@
   </distributionManagement>
 
   <dependencies>
+
+    <!-- Core Dependencies -->
+
     <dependency>
       <groupId>co.cask.wrangler</groupId>
       <artifactId>wrangler-api</artifactId>
@@ -53,12 +56,6 @@
       <version>${cdap.version}</version>
       <scope>provided</scope>
     </dependency>
-    <dependency>
-      <groupId>co.cask.wrangler</groupId>
-      <artifactId>wrangler-test</artifactId>
-      <version>${wrangler.version}</version>
-      <scope>test</scope>
-    </dependency>
 
     <!-- External Dependencies -->
 
@@ -67,6 +64,15 @@
       <artifactId>commons-codec</artifactId>
       <version>${commons.codec.version}</version>
     </dependency>
+
+    <!-- Testing Dependencies -->
+    <dependency>
+      <groupId>co.cask.wrangler</groupId>
+      <artifactId>wrangler-test</artifactId>
+      <version>${wrangler.version}</version>
+      <scope>test</scope>
+    </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
