--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <!-- properties for script build step that creates the config files for the artifacts -->
     <widgets.dir>widgets</widgets.dir>
     <docs.dir>docs</docs.dir>
-    <app.parents>wrangler-service[1.0.0-SNAPSHOT, 4.0.0-SNAPSHOT],system:cdap-data-pipeline[4.2.0-SNAPSHOT,4.4.0-SNAPSHOT),system:cdap-data-streams[4.2.0-SNAPSHOT,4.4.0-SNAPSHOT)</app.parents>
+    <app.parents>system:wrangler-service[1.0.0-SNAPSHOT, 4.0.0-SNAPSHOT],system:cdap-data-pipeline[4.2.0-SNAPSHOT,4.4.0-SNAPSHOT),system:cdap-data-streams[4.2.0-SNAPSHOT,4.4.0-SNAPSHOT)</app.parents>
     <!-- this is here because project.basedir evaluates to null in the script build step -->
     <main.basedir>${project.basedir}</main.basedir>
     <cdap.version>4.3.0-SNAPSHOT</cdap.version>
