--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,8 @@
     <docs.dir>docs</docs.dir>
     <!-- this is here because project.basedir evaluates to null in the script build step -->
     <main.basedir>${project.basedir}</main.basedir>
-    <cdap.version>4.3.0-SNAPSHOT</cdap.version>
-    <wrangler.version>3.0.0-SNAPSHOT</wrangler.version>
+    <cdap.version>4.3.1</cdap.version>
+    <wrangler.version>3.0.0</wrangler.version>
     <commons.codec.version>1.10</commons.codec.version>
     <junit.version>4.12</junit.version>
   </properties>
@@ -39,7 +39,7 @@
       <id>sonatype</id>
       <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
     </pluginRepository>
-  </pluginRepositories>       
+  </pluginRepositories>
          
   <dependencies>
     <!-- Core Dependencies -->
@@ -142,7 +142,7 @@
       <plugin>
         <groupId>co.cask</groupId>
         <artifactId>cdap-maven-plugin</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.0-SNAPSHOT</version>
         <configuration>
           <cdapArtifacts>
             <parent>system:wrangler-transform[1.0.0-SNAPSHOT, 10.0.0-SNAPSHOT]</parent>
