--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <groupId>com.example</groupId>
   <artifactId>simple-udds</artifactId>
   <name>Simple User Defined Directives</name>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.1</version>
   <packaging>jar</packaging>
 
   <properties>
@@ -16,7 +16,7 @@
     <docs.dir>docs</docs.dir>
     <!-- this is here because project.basedir evaluates to null in the script build step -->
     <main.basedir>${project.basedir}</main.basedir>
-    <cdap.version>4.3.1</cdap.version>
+    <cdap.version>5.1.2</cdap.version>
     <wrangler.version>3.0.1</wrangler.version>
     <commons.codec.version>1.10</commons.codec.version>
     <junit.version>4.12</junit.version>
@@ -144,7 +144,7 @@
         <version>1.0.1</version>
         <configuration>
           <cdapArtifacts>
-            <parent>system:wrangler-transform[3.0.0,10.0.0)</parent>
+            <parent>system:wrangler-transform[3.2.0,4.0.0-SNAPSHOT)</parent>
           </cdapArtifacts>
         </configuration>
         <executions>
