--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
   <groupId>com.example</groupId>
   <artifactId>simple-udds</artifactId>
   <name>Simple User Defined Directives</name>
-  <version>1.1.0</version>
+  <version>1.2.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <properties>
