--- a/pom.xml
+++ b/pom.xml
@@ -144,6 +144,7 @@
         <configuration>
           <cdapArtifacts>
             <parent>system:wrangler-transform[4.0.0,5.0.0)</parent>
+            <parent>system:wrangler-service[4.0.0,5.0.0)</parent>
           </cdapArtifacts>
         </configuration>
         <executions>
